# adaptly

./: CMakeLists.txt  QmlModule.cmake  readme.md
qml/: Main.qml
src/: main.cpp
